# pypi-aws-secrets

./: .gitignore  Cargo.toml  README.md  extract.sh  state-from-start.json  state.json
.github/workflows/: ci.yml  from_start.yml
keys/QuantPanda/: QuantPanda-0.0.23-py3-none-any.whl.md  QuantPanda-0.0.24-py3-none-any.whl.md  QuantPanda-0.0.24.tar.gz.md  QuantPanda-0.0.25-py3-none-any.whl.md  QuantPanda-0.0.25.tar.gz.md
keys/datupapi/: datupapi-1.68.0-py3-none-any.whl.md  datupapi-1.69.0-py3-none-any.whl.md
keys/elixir/mathlogic_s3_test/: mathlogic_s3_test-0.1.0.tar.md  mathlogic_s3_test-0.1.1.tar.md
keys/hadata/: hadata-2.5.109-py2.py3-none-any.whl.md  hadata-2.5.110-py2.py3-none-any.whl.md
keys/nbox/: nbox-0.11.2rc3-py3-none-any.whl.md  nbox-0.11.2rc3.tar.gz.md
keys/pkg-testaws-handsonter/: pkg_testaws_handsonter-0.0.1-py3-none-any.whl.md
keys/pypi/Aj-Zsl-nlu/: Aj_Zsl_nlu-4.2.0-py3-none-any.whl.md  Aj_Zsl_nlu-4.2.0.tar.gz.md
keys/pypi/BigJob2/: BigJob2-0.54.tar.gz.md
keys/pypi/GreenMatterAI/: GreenMatterAI-0.0.11.tar.gz.md  GreenMatterAI-0.0.12.tar.gz.md  GreenMatterAI-0.0.13.tar.gz.md  GreenMatterAI-0.0.14.tar.gz.md  GreenMatterAI-0.0.15.tar.gz.md  GreenMatterAI-0.0.16.tar.gz.md  GreenMatterAI-0.0.17.tar.gz.md  GreenMatterAI-0.0.18.tar.gz.md
keys/pypi/HALdata/: HALdata-0.1.21-py3-none-any.whl.md
keys/pypi/MentheDb/: MentheDb-0.0.1.tar.gz.md  MentheDb-0.0.2.tar.gz.md  MentheDb-0.0.3.tar.gz.md  MentheDb-0.0.4.tar.gz.md
keys/pypi/QuantPanda/: QuantPanda-0.0.22.tar.gz.md  (+7 more)
keys/rplus-constants-module/: rplus_constants_module-0.0.4-py3-none-any.whl.md
scripts/: extract-fs.sh  extract-stdout.sh
src/: aws.rs  main.rs  old_main.rs  reporter.rs  state.rs  template.md
src/scanners/: mod.rs  ripgrep.rs
src/sources/: hexpm.rs  mod.rs  pypi.rs  rubygems.rs
(+1045 files in other folders)
