[package]
name = "pypi-data-scraper"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.0.29", features = ["derive"] }
indicatif = { version = "0.17.2", features = ["rayon"] }
itertools = "0.10.5"
jwalk = "0.8.1"
rayon = "1.6.1"
reqwest = { version = "0.11.13", features = ["serde_json", "json"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
serde_with = "2.1.0"
temp-dir = "0.1.11"
xmlrpc = "0.15.1"
url = { version = "2.3.1", features = ["serde"]}
aws-sdk-sts = "0.22.0"
aws-config = "0.52.0"
tokio = { version = "1.23.0", features = ["full"] }
regex = "1.7.0"
lazy_static = "1.4.0"
